-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 13
-
Component/s: hotspot
-
b07
The macro G1CollectedHeap::assert_used_and_recalculate_used_equal always recalculates the bytes used in the regions, although it does not use the value in release builds.
This can cause long delays on large heaps (with many regions).
E.g. on BigRAMTester@50g heap@1m regions (50k regions) this method may take ~20ms (up to 200ms).
Note that using 1M regions on a 50g heap is not advised (and G1 will not select 1m regions)
This can cause long delays on large heaps (with many regions).
E.g. on BigRAMTester@50g heap@1m regions (50k regions) this method may take ~20ms (up to 200ms).
Note that using 1M regions on a 50g heap is not advised (and G1 will not select 1m regions)
- relates to
-
JDK-8159979 During initial mark, preparing all regions for marking may take a significant amount of time
-
- Resolved
-
-
JDK-8227665 Clearing collection set candidates takes a significant amount of time
-
- Closed
-
-
JDK-8221509 Refactor assert( G1CollectedHeap::used() == recalculate_used() ) with better message
-
- Resolved
-
-
JDK-8152948 More unaccounted other time on large machines
-
- Closed
-