8227671: G1: assert_used_and_recalculate_used_equal performs work in product builds

Reviewed-by: kbarrett, sangheki